Add file import history tracking to prevent duplicate imports. Update `TransactionImportService` with file validation, unique transaction filtering, and save functionality. Extend database schema with `file_import_history` table and repository. Update controllers and tests for new import logic.